Fix for bug 135272. columns content doesn't flip when setting the UI aligned to the right r=bryner, sr=jag